--- a/docs/latex/_data_handler_8h_source.tex
+++ b/docs/latex/_data_handler_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{Data\+Handler.\+h}
-\hypertarget{_data_handler_8h_source}{}\label{_data_handler_8h_source}\index{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/DataHandler.h@{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/DataHandler.h}}
+\hypertarget{_data_handler_8h_source}{}\label{_data_handler_8h_source}\index{include/DataHandler.h@{include/DataHandler.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#include\ <vector>}}
