--- a/docs/latex/_parser_8h_source.tex
+++ b/docs/latex/_parser_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{Parser.\+h}
-\hypertarget{_parser_8h_source}{}\label{_parser_8h_source}\index{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/parse/Parser.h@{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/parse/Parser.h}}
+\hypertarget{_parser_8h_source}{}\label{_parser_8h_source}\index{include/parse/Parser.h@{include/parse/Parser.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
