--- a/docs/latex/class_data_handler.tex
+++ b/docs/latex/class_data_handler.tex
@@ -13,4 +13,4 @@
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/include/Data\+Handler.\+h\end{DoxyCompactItemize}
+include/Data\+Handler.\+h\end{DoxyCompactItemize}
