--- a/docs/latex/class_i_parser.tex
+++ b/docs/latex/class_i_parser.tex
@@ -10,4 +10,4 @@ virtual void {\bfseries parse} ()=0
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/include/parse/Parser.\+h\end{DoxyCompactItemize}
+include/parse/Parser.\+h\end{DoxyCompactItemize}
