--- a/docs/latex/classsample__class.tex
+++ b/docs/latex/classsample__class.tex
@@ -22,4 +22,4 @@ Here is the more detailed description!
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/src/Integrator.\+cpp\end{DoxyCompactItemize}
+src/Integrator.\+cpp\end{DoxyCompactItemize}
