--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,7 +1,7 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/include/\mbox{\hyperlink{_compute_engine_8h_source}{Compute\+Engine.\+h}} }{\pageref{_compute_engine_8h_source}}{}
-\item\contentsline{section}{/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/include/\mbox{\hyperlink{_data_handler_8h_source}{Data\+Handler.\+h}} }{\pageref{_data_handler_8h_source}}{}
-\item\contentsline{section}{/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/include/\mbox{\hyperlink{_integrator_8h_source}{Integrator.\+h}} }{\pageref{_integrator_8h_source}}{}
-\item\contentsline{section}{/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/include/parse/\mbox{\hyperlink{_parser_8h_source}{Parser.\+h}} }{\pageref{_parser_8h_source}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{_compute_engine_8h_source}{Compute\+Engine.\+h}} }{\pageref{_compute_engine_8h_source}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{_data_handler_8h_source}{Data\+Handler.\+h}} }{\pageref{_data_handler_8h_source}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{_integrator_8h_source}{Integrator.\+h}} }{\pageref{_integrator_8h_source}}{}
+\item\contentsline{section}{include/parse/\mbox{\hyperlink{_parser_8h_source}{Parser.\+h}} }{\pageref{_parser_8h_source}}{}
 \end{DoxyCompactList}
