--- a/docs/latex/struct_data_container.tex
+++ b/docs/latex/struct_data_container.tex
@@ -13,4 +13,4 @@ const std\+::type\+\_\+info \texorpdfstring{$\ast$}{*} {\bfseries type}
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-/\+Users/nicholaspatapoff/\+Documents/\+Git\+Hub/\+Modular\+Compute\+Pipeline/include/Data\+Handler.\+h\end{DoxyCompactItemize}
+include/Data\+Handler.\+h\end{DoxyCompactItemize}
