--- a/docs/latex/_compute_engine_8h_source.tex
+++ b/docs/latex/_compute_engine_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{Compute\+Engine.\+h}
-\hypertarget{_compute_engine_8h_source}{}\label{_compute_engine_8h_source}\index{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/ComputeEngine.h@{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/ComputeEngine.h}}
+\hypertarget{_compute_engine_8h_source}{}\label{_compute_engine_8h_source}\index{include/ComputeEngine.h@{include/ComputeEngine.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
