--- a/docs/latex/_integrator_8h_source.tex
+++ b/docs/latex/_integrator_8h_source.tex
@@ -1,5 +1,5 @@
 \doxysection{Integrator.\+h}
-\hypertarget{_integrator_8h_source}{}\label{_integrator_8h_source}\index{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/Integrator.h@{/Users/nicholaspatapoff/Documents/GitHub/ModularComputePipeline/include/Integrator.h}}
+\hypertarget{_integrator_8h_source}{}\label{_integrator_8h_source}\index{include/Integrator.h@{include/Integrator.h}}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
